# graphiti

./: AGENTS.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.claude/context/: product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
.claude/prds/: apply-falkor.md
.github/: copilot-commit-message-instructions.md  copilot-instructions.md
.github/instructions/: javascript.instructions.md  markdown.instructions.md  python.instructions.md
.github/prompts/: comment.prompt.md  create_env.prompt.md  create_gitignore.prompt.md  create_pre_commit.prompt.md  implement.prompt.md  pre-commit.prompt.md  translate.prompt.md
.github/workflows/: unit_tests.yml
docs/guides/: neo4j-to-falkordb.md
docs/setup/: docker-deployment.md  environment-variables.md  (+1 more)
graphiti_core/: graphiti.py
mcp_server/: .env.falkordb.example  Dockerfile  Dockerfile.falkordb  README_FALKORDB_OPTIMIZATION.md  benchmark_performance.py  debug_config.py  docker-compose.falkordb.yml  graphiti_mcp_server.py  pyproject.toml  test_driver_factory.py  test_falkor_complete.py  test_falkor_config.py  test_graphiti_constructor.py  test_mcp_init.py
mcp_server/k8s/: README.md  configmap.yaml  falkordb-deployment.yaml  graphiti-deployment.yaml  namespace.yaml
scripts/: build_mcp.sh  test_dual_database_setup.py
tests/: test_dual_database_integration.py  test_falkordb_specific_features.py  test_graphiti_driver_selection.py  test_graphiti_int.py
(+38 files in other folders)
